...
  final binary = ByteData(vertices.length * 4);
  for (var i = 0; i < vertices.length; i++) {
    binary.setFloat32(i * 4, vertices[i], Endian.little);
  }
  final json = utf8.encode(
    jsonEncode({
      'asset': {'version': '2.0', 'copyright': 'Zyren synthetic buildings'},
      'buffers': [
        {'byteLength': binary.lengthInBytes},
      ],
      'bufferViews': [
        {'buffer': 0, 'byteLength': binary.lengthInBytes},
      ],
...
